# JAX-IB-LBM

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: python_import_guide.md
examples/: 2d_cylinder.py  2d_elastically_mounted_circular_cylinder.py  2d_flow_past_tethered_circular_membrane.py  2d_ib_elastic_beam.py  2d_lid_driven_cavity.py  2d_poiseuille_flow.py  2d_square_cylinder.py  2d_static_circular_cylinder.py  2d_static_circular_cylinder_ibm.py  2d_taylor_green_vortex.py  3d_channel_flow.py  temp_LBM.py
src/: __init__.py
src/boundary/: __init__.py  base.py  bounce_back.py  dirichlet.py  neumann.py  periodic.py
src/core/: __init__.py  funcutils.py  grid.py  lattice.py  params.py  state.py
src/fluid/: __init__.py  collision.py  equilibrium.py  macroscopic.py  streaming.py
src/forcing/: __init__.py  guo.py
src/immersed_boundary/: __init__.py  delta.py  elasticity.py  geometry.py  ib_step.py  interpolation.py  solid_model.py  spreading.py
src/immersed_boundary_legacy_code/: delta.py  elasticity.py  interpolation.py  markers.py  spreading.py
src/postprocess/: __init__.py  diagnostics.py  export.py  streamfunction.py  vorticity.py
src/solvers/: __init__.py  fsi_solver.py  lbm_solver.py
src/utils/: __init__.py  export.py  io.py  viz.py
tests/: test_bc.py  test_collision.py  test_convergence.py  test_grid.py  test_ib.py  test_lattice.py
